# bookmark2obsidian

./: .gitignore  PROJECT_CHARTER.md  README.md  activate.sh  app.py  debug_bookmark_analysis.py  debug_bookmark_titles.py  debug_duplicate_issue.py  debug_exclusion_details.py  debug_folder_processing.py  debug_folder_recursion.py  debug_html_structure.py  debug_new_logic.py  debug_p_dt_structure.py  debug_p_structure.py  debug_parser.py  debug_real_structure.py  debug_structure_parsing.py  debug_test_case.py  filter_rules.yml  pyproject.toml  run_tests.py  test_duplicate_check.py  test_local_directory_functionality.py
.kiro/specs/bookmark-to-obsidian/: design.md  requirements.md  tasks.md
.kiro/specs/performance-and-ui-improvements/: design.md  requirements.md  tasks.md
.kiro/specs/streamlit-app-refactoring/: design.md  requirements.md  tasks.md
core/: cache_manager.py  file_manager.py  generator.py  parser.py  scraper.py
debug_scripts/: debug_bookmark_analysis.py  debug_bookmark_titles.py  debug_diff_checker.py  debug_duplicate_issue.py  debug_exclusion_details.py  debug_folder_processing.py  debug_folder_recursion.py  debug_html_structure.py  debug_inspect_tree.py  debug_new_logic.py  debug_p_dt_structure.py  debug_p_structure.py  debug_parser.py  debug_real_structure.py  debug_structure_parsing.py  debug_test_case.py
tests/: conftest.py  test_bookmark_parser.py  test_content_extraction.py  test_duplicate_check.py  test_edge_cases.py  test_file_save_user_control.py  test_file_validation.py  test_functionality.py  test_integration.py  test_integration_performance.py  test_local_directory_functionality.py  test_local_directory_manager.py  test_markdown_generator.py  test_page_preview.py  test_parser_profiler.py  test_progress_error_handling.py
ui/: __init__.py  components.py  progress_display.py
utils/: __init__.py  cache_utils.py  error_handler.py  models.py  performance_utils.py
