[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookmark-to-obsidian"
version = "0.1.0"
description = "Convert Chrome bookmarks to Obsidian markdown files"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Developer"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8.1"
dependencies = [
    "streamlit>=1.28.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/user/bookmark-to-obsidian"
Repository = "https://github.com/user/bookmark-to-obsidian"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.12",
]
