[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookmark2obsidian"
version = "0.1.0"
description = "ブックマークファイルをObsidian形式に変換するツール"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "beautifulsoup4>=4.12.0",
    "psutil>=5.9.0",
    "pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "utils", "ui"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "performance: パフォーマンステスト",
    "integration: 統合テスト",
    "unit: ユニットテスト",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.12.12",
]
