[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookmark2obsidian"
version = "0.1.0"
description = "ブックマークファイルをObsidian形式に変換するツール"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "beautifulsoup4>=4.12.0",
    "psutil>=5.9.0",
    "pyyaml",
    "streamlit-autorefresh",
    "lxml>=6.0.1",
    "html5lib>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "utils", "ui"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "performance: パフォーマンステスト",
    "integration: 統合テスト",
    "unit: ユニットテスト",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.12.12",
]

[tool.ruff]
# Lintルールの設定
preview = true  # プレビュー機能を有効化（空白行末尾スペース削除などが有効になる）
line-length = 120  # Lint側の行長制限（警告用）

[tool.ruff.lint]
select = ["E", "W", "F"]  # PEP8系と未使用変数など
fixable = ["ALL"]         # 自動修正可能なものは全部許可

[tool.ruff.format]
# フォーマッタ設定（Black互換）
quote-style = "double"    # 文字列のクォート統一（任意）
indent-style = "space"    # インデントはスペース
skip-magic-trailing-comma = false
